# c_connection

./: .gitignore  CMakeLists.txt  dependencies.sh
src/: CMakeLists.txt  client.hpp  common.hpp  connection.hpp  main.cpp  message_template.hpp  queue.hpp  test.cpp  utils.hpp
src/connection/: CMakeLists.txt  connection.cpp  connection.hpp
